# spent-box

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/: README.md  main.py  pyproject.toml  requirements.txt  spent-box.db
backend/api/: routes.py
backend/api/endpoints/: expenses.py  upload.py
backend/app/: crud.py  database.py  main.py  models2.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py  routes.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: __init__.py  analyzer.py  categorizer.py  category.py  category_keyword.py  payment_method.py  user.py
backend/app/models/: __init__.py  category.py  category_keyword.py  category_model.py  expense.py  item.py  payment_method.py  user.py  users_model.py
backend/app/schemas/: __init__.py  category.py  category_keyword.py  category_schema.py  file_analyzer_schemas.py  payment_method.py  user_schema.py
backend/app/services/: categorization_service.py  category_service.py  expense_service.py  file_analyzer_service.py  user_service.py
backend/app/tests/: conftest.py  test_api_category.py  test_api_expense.py  test_api_upload.py  test_categorization_service.py  (+6 more)
backend/core/: config.py
backend/models/: expense.py
backend/repositories/: category_repository.py
backend/services/: categorization_service.py  expense_service.py  file_analyzer_service.py
backend/tests/: test_api_expense.py  test_api_upload.py  test_categorization_service.py  test_expense_service.py  test_hyundai_card_converter.py  test_kb_card_converter.py
(+52 files in other folders)
