[project]
name = "spent-box"
version = "0.1.0"
description = ""
authors = [
    {name = "jaystar13",email = "astarisk2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "beautifulsoup4 (==4.13.4)",
    "bs4 (==0.0.2)",
    "certifi (==2025.1.31)",
    "click (==8.1.8)",
    "fastapi (==0.115.12)",
    "greenlet (==3.2.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.8)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "numpy (==2.2.5)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "playwright (==1.52.0)",
    "pluggy (==1.5.0)",
    "pydantic (==2.11.3)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.33.1)",
    "pyee (==13.0.0)",
    "pytest (==8.3.5)",
    "pytest-asyncio (==0.26.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.0)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "uvicorn (==0.34.2)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
